[gd_scene load_steps=6 format=3 uid="uid://ck7wpe0a5cgxj"]

[ext_resource type="FontFile" uid="uid://bryjyrpm6k4hm" path="res://Fonts/Abaddon-Light.ttf" id="1_2rh8s"]
[ext_resource type="Script" uid="uid://dk1u1ii7xjbkh" path="res://CharacterCreator/character_creator.gd" id="1_80knc"]
[ext_resource type="AudioStream" uid="uid://p3geyldqfb3s" path="res://Audio/example_music_01.ogg" id="2_cge1w"]
[ext_resource type="PackedScene" uid="uid://sx10ttkyxwwi" path="res://Scenes/Levels/player_spawn.tscn" id="3_ldmov"]
[ext_resource type="AudioStream" uid="uid://b8fdjyabyitf4" path="res://Audio/click.wav" id="3_uycd5"]

[node name="CharacterCreator" type="Node2D"]
script = ExtResource("1_80knc")
music = ExtResource("2_cge1w")
button_focus_audio = ExtResource("3_uycd5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1279.0
offset_bottom = 721.0
color = Color(0.3113789, 0.5829434, 0.99071157, 0.48100004)

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 572.0
offset_top = 557.0
offset_right = 681.0
offset_bottom = 663.0
grow_horizontal = 2
grow_vertical = 0

[node name="Details" type="ColorRect" parent="CanvasLayer/Control/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="CanvasLayer/Control/ColorRect/Details"]
layout_mode = 0
offset_left = 10.0
offset_top = 21.0
offset_right = 101.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Name :"
horizontal_alignment = 1

[node name="NameBox" type="TextEdit" parent="CanvasLayer/Control/ColorRect/Details"]
layout_mode = 0
offset_left = 7.0
offset_top = 43.0
offset_right = 104.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_2rh8s")
placeholder_text = "Cob"

[node name="ConfirmButton" type="Button" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -33.0
offset_right = 45.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
text = "Play"

[node name="PlayerSpawn" parent="." instance=ExtResource("3_ldmov")]
position = Vector2(626, 356)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 4

[connection signal="text_changed" from="CanvasLayer/Control/ColorRect/Details/NameBox" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="CanvasLayer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
